# BggApp

./: .gitignore  Dockerfile  README.md  config.py  env.template  pyproject.toml  pytest.ini  settings.yaml  tox.ini
.deployment/: docker-compose.yml
.deployment/helm/bgapp/: Chart.yaml
.deployment/helm/values/: 00-local-values.yaml
.github/workflows/: build-docker-image.yml  ci.yml  integration-test.yml  unit-test.yml  upload_coverage.yml
_resources/: categories.json
boardgame/: bootstrap.py
boardgame/adapters/: orm.py
boardgame/adapters/clients/: abstract_bgg_client.py  dto.py  exceptions.py  xml_bgg_client.py
boardgame/adapters/repositories/: __init__.py  boardgame_repository.py  category_repository.py  family_repository.py  mechanic_repository.py
boardgame/adapters/views/: boardgame_views.py
boardgame/domain/: commands.py  events.py
boardgame/domain/model/: __init__.py  aggregate.py  boardgame.py  category.py  expansion.py  family.py  language_dependence.py  mechanic.py  player.py  stat.py
boardgame/entrypoints/: fastapi_app.py
boardgame/libs/: xml.py
boardgame/presentation/graphql/: pagination.py
boardgame/services/: loader_service.py  messagebus.py  unit_of_work.py
tests/: conftest.py
tests/_resources/: boardgame.xml
tests/integration/services/: test_loader_service.py
tests/unit/domain/: test_category.py  test_languange_dependence.py  test_player.py
tests/unit/fakes/: __init__.py  fake_bgg_client.py  fake_graphql_type.py  fake_http_client.py  fake_unit_of_work.py
tests/unit/libs/: test_xml.py
(+26 files in other folders)
